added new csv with pictures and gifs, changed handler and added new endpoint to show details of one pokemon
