# api/swagger.yml
@@ -288,7 +288,7 @@ paths:
       - collection
       summary: get all pokemon in collection or search pokemon by attribute (name,
         type, etc.)
-      operationId: getPokemonInCollection
+      operationId: getCollectionPokemon
       parameters:
       - type: string
         description: pokemon name to search for
@@ -339,9 +339,9 @@ paths:
         in: query
       responses:
         "200":
-          description: GetPokemonInCollectionResponse
+          description: GetCollectionPokemonResponse
           schema:
-            $ref: '#/definitions/getPokemonInCollectionResponse'
+            $ref: '#/definitions/getCollectionPokemonResponse'
         "400":
           description: invalid search parameters
   /api/v1/collection/pokemon/{pokemonId}:
@@ -351,7 +351,7 @@ paths:
       tags:
       - collection
       summary: retrieve details for a pokemon from collection
-      operationId: getPokemonInCollectionDetails
+      operationId: getCollectionPokemonDetail
       parameters:
       - type: string
         description: pokemon ID to retrieve details for
@@ -360,9 +360,9 @@ paths:
         required: true
       responses:
         "200":
-          description: GetPokemonInCollectionResponse
+          description: GetCollectionPokemonDetailResponse
           schema:
-            $ref: '#/definitions/getPokemonInCollectionResponse'
+            $ref: '#/definitions/getCollectionPokemonDetailResponse'
         "404":
           description: pokemon or collection not found
     put:
@@ -375,15 +375,16 @@ paths:
       operationId: putEditPokemonInCollection
       parameters:
       - type: string
-        description: pokemon's ID to edit
+        description: pokemon id to edit
         name: pokemonId
         in: path
         required: true
-      - name: caught
+      - description: nickname and caught date
+        name: body
         in: body
         required: true
         schema:
-          $ref: '#/definitions/collection'
+          $ref: '#/definitions/pokemonBody'
       responses:
         "200":
           description: pokemon updated in collection successfully
@@ -501,7 +502,7 @@ paths:
       tags:
       - pokemon
       summary: retrieve details for a specific pokemon by id
-      operationId: getPokemonDetails
+      operationId: getPokemon
       parameters:
       - type: string
         description: id of pokemon
@@ -530,10 +531,10 @@ paths:
         name: pokemonId
         in: path
         required: true
-      - name: caught
+      - name: body
         in: body
         schema:
-          $ref: '#/definitions/collection'
+          $ref: '#/definitions/pokemonBody'
       responses:
         "201":
           description: pokemon added to collection successfully
@@ -599,13 +600,151 @@ paths:
         "200":
           description: OK
 definitions:
-  collection:
+  collectionPokemon:
     type: object
     required:
-    - pokemon
+    - pokemon_id
+    - name_or_nickname
+    - type1
+    - hp
+    - attack
+    - defense
+    - speed
+    - special
+    - png
+    - description
     properties:
-      pokemon:
-        $ref: '#/definitions/pokemon'
+      attack:
+        description: attack of pokemon
+        type: integer
+        example: 49
+      defense:
+        description: defense of pokemon
+        type: integer
+        example: 49
+      description:
+        description: description of pokemon
+        type: string
+        example: A strange seed was planted on its back at birth. The plant sprouts
+          and grows with this Pokémon.
+      hp:
+        description: hp of pokemon
+        type: integer
+        example: 45
+      name_or_nickname:
+        description: name or nickname of pokemon
+        type: string
+        example: Bulby
+      png:
+        description: png URL of pokemon
+        type: string
+        example: https://play.pokemonshowdown.com/sprites/bw/bulbasaur.png
+      pokemon_id:
+        description: ID of pokemon
+        type: string
+        format: uuid4
+        example: ded12a71-9fc3-430f-8259-a6779f1a7f0c
+      special:
+        description: special stat of pokemon
+        type: integer
+        example: 65
+      speed:
+        description: speed of pokemon
+        type: integer
+        example: 45
+      type1:
+        description: first type of pokemon
+        type: string
+        example: Grass
+      type2:
+        description: second type of pokemon
+        type: string
+        example: Poison
+  collectionPokemonDetail:
+    type: object
+    required:
+    - pokemon_id
+    - name_or_nickname
+    - caught
+    - type1
+    - hp
+    - attack
+    - defense
+    - speed
+    - special
+    - png
+    - gif
+    - description
+    properties:
+      attack:
+        description: attack of pokemon
+        type: integer
+        example: 49
+      caught:
+        description: date when pokemon was caught
+        type: string
+        format: date
+        example: "2024-03-30"
+      defense:
+        description: defense of pokemon
+        type: integer
+        example: 49
+      description:
+        description: description of pokemon
+        type: string
+        example: A strange seed was planted on its back at birth. The plant sprouts
+          and grows with this Pokémon.
+      gif:
+        description: gif URL of pokemon
+        type: string
+        example: https://play.pokemonshowdown.com/sprites/bwani/bulbasaur.gif
+      hp:
+        description: hp of pokemon
+        type: integer
+        example: 45
+      name_or_nickname:
+        description: name or nickname of pokemon
+        type: string
+        example: Bulby
+      png:
+        description: png URL of pokemon
+        type: string
+        example: https://play.pokemonshowdown.com/sprites/bw/bulbasaur.png
+      pokemon_id:
+        description: ID of pokemon
+        type: string
+        format: uuid4
+        example: ded12a71-9fc3-430f-8259-a6779f1a7f0c
+      special:
+        description: special stat of pokemon
+        type: integer
+        example: 65
+      speed:
+        description: speed of pokemon
+        type: integer
+        example: 45
+      type1:
+        description: first type of pokemon
+        type: string
+        example: Grass
+      type2:
+        description: second type of pokemon
+        type: string
+        example: Poison
+  getCollectionPokemonDetailResponse:
+    type: object
+    properties:
+      data:
+        $ref: '#/definitions/collectionPokemonDetail'
+  getCollectionPokemonResponse:
+    type: object
+    properties:
+      data:
+        type: array
+        items:
+          $ref: '#/definitions/collectionPokemon'
+      pagination:
+        $ref: '#/definitions/pagination'
   getDownloadResponse:
     type: object
     required:
@@ -620,19 +759,6 @@ definitions:
         description: HTTP status code of the operation
         type: integer
         example: 200
-  getPokemonInCollectionResponse:
-    type: object
-    required:
-    - data
-    - pagination
-    properties:
-      data:
-        description: list of pokemon objects
-        type: array
-        items:
-          $ref: '#/definitions/pokemon'
-      pagination:
-        $ref: '#/definitions/pagination'
   getPokemonResponse:
     type: object
     required:
@@ -953,6 +1079,18 @@ definitions:
         description: second type of pokemon
         type: string
         example: Poison
+  pokemonBody:
+    type: object
+    properties:
+      caught:
+        description: date when pokemon was caught
+        type: string
+        format: date
+        example: "2024-03-30"
+      nickname:
+        description: name or nickname of pokemon
+        type: string
+        example: Bulby
   postChangePasswordPayload:
     type: object
     required:
