# internal/api/handlers/handlers.go
@@ -23,8 +23,8 @@ func AttachAllRoutes(s *api.Server) {
 		auth.PostRefreshRoute(s),
 		auth.PostRegisterRoute(s),
 		collection.DeletePokemonRoute(s),
-		collection.GetPokemonDetailsRoute(s),
-		collection.GetPokemonInCollectionRoute(s),
+		collection.GetCollectionPokemonDetailRoute(s),
+		collection.GetCollectionPokemonRoute(s),
 		collection.PostAddPokemonToCollectionRoute(s),
 		collection.PutEditPokemonRoute(s),
 		common.GetHealthyRoute(s),
