# internal/types/collection/get_collection_pokemon_detail_parameters.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package pokemon
+package collection
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -13,23 +13,23 @@ import (
 	"github.com/go-openapi/strfmt"
 )
 
-// NewGetPokemonDetailsParams creates a new GetPokemonDetailsParams object
+// NewGetCollectionPokemonDetailParams creates a new GetCollectionPokemonDetailParams object
 // no default values defined in spec.
-func NewGetPokemonDetailsParams() GetPokemonDetailsParams {
+func NewGetCollectionPokemonDetailParams() GetCollectionPokemonDetailParams {
 
-	return GetPokemonDetailsParams{}
+	return GetCollectionPokemonDetailParams{}
 }
 
-// GetPokemonDetailsParams contains all the bound params for the get pokemon details operation
+// GetCollectionPokemonDetailParams contains all the bound params for the get collection pokemon detail operation
 // typically these are obtained from a http.Request
 //
-// swagger:parameters getPokemonDetails
-type GetPokemonDetailsParams struct {
+// swagger:parameters getCollectionPokemonDetail
+type GetCollectionPokemonDetailParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
-	/*id of pokemon
+	/*pokemon ID to retrieve details for
 	  Required: true
 	  In: path
 	*/
@@ -39,8 +39,8 @@ type GetPokemonDetailsParams struct {
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
 // for simple values it will use straight method calls.
 //
-// To ensure default values, the struct must have been initialized with NewGetPokemonDetailsParams() beforehand.
-func (o *GetPokemonDetailsParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+// To ensure default values, the struct must have been initialized with NewGetCollectionPokemonDetailParams() beforehand.
+func (o *GetCollectionPokemonDetailParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
 	var res []error
 
 	o.HTTPRequest = r
@@ -56,7 +56,7 @@ func (o *GetPokemonDetailsParams) BindRequest(r *http.Request, route *middleware
 	return nil
 }
 
-func (o *GetPokemonDetailsParams) Validate(formats strfmt.Registry) error {
+func (o *GetCollectionPokemonDetailParams) Validate(formats strfmt.Registry) error {
 	var res []error
 
 	// pokemonId
@@ -70,7 +70,7 @@ func (o *GetPokemonDetailsParams) Validate(formats strfmt.Registry) error {
 }
 
 // bindPokemonID binds and validates parameter PokemonID from path.
-func (o *GetPokemonDetailsParams) bindPokemonID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+func (o *GetCollectionPokemonDetailParams) bindPokemonID(rawData []string, hasKey bool, formats strfmt.Registry) error {
 	var raw string
 	if len(rawData) > 0 {
 		raw = rawData[len(rawData)-1]
