# internal/types/pokemon_body.go
@@ -1,0 +1,79 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PokemonBody pokemon body
+//
+// swagger:model pokemonBody
+type PokemonBody struct {
+
+	// date when pokemon was caught
+	// Example: 2024-03-30
+	// Format: date
+	Caught strfmt.Date `json:"caught,omitempty"`
+
+	// name or nickname of pokemon
+	// Example: Bulby
+	Nickname string `json:"nickname,omitempty"`
+}
+
+// Validate validates this pokemon body
+func (m *PokemonBody) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCaught(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PokemonBody) validateCaught(formats strfmt.Registry) error {
+	if swag.IsZero(m.Caught) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("caught", "body", "date", m.Caught.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this pokemon body based on context it is used
+func (m *PokemonBody) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PokemonBody) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PokemonBody) UnmarshalBinary(b []byte) error {
+	var res PokemonBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
